--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/miglayout15-swing.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/STAR_SignalSystem"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/star_signalsystem_java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
